--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+        <link href="<https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap>" rel="stylesheet" />
         <link rel="stylesheet" href="./css/styles.css" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +11,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html">WebStudio</a>
+                <a href="./index.html"><span class="logo">Web</span>Studio</a>
                 <ul>
                     <li><a href="#">Studio</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -121,7 +123,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html"><span class="logo">Web</span>Studio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
