--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head>
+        <link rel="stylesheet" href="./css/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html"><span class="logo">Web</span>Studio</a>
+                <a href="./index.html"><span class="logo">WEB</span>STUDIO</a>
                 <ul>
                     <li><a href="#">Studio</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -124,7 +125,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html"><span class="logo">Web</span>Studio</a>
+            <a href="./index.html"><span class="logo">WEB</span>STUDIO</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
