--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             <nav>
                 <a href="./index.html" class="logo">WEB<span class="partoflogo">STUDIO</span></a>
                 <ul>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="./index.html" class="nav">Studio</a></li>
+                    <li><a href="" class="nav">Portfolio</a></li>
+                    <li><a href="" class="nav">Contacts</a></li>
                 </ul>
             </nav>
             <address>
                 <ul>
                     <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
