--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html" class="logo">WEB<span class="partoflogo">STUDIO</span></a>
+                <a href="./index.html" class="logo">Web<span class="partoflogo">Studio</span></a>
                 <ul>
                     <li><a href="./index.html" class="nav">Studio</a></li>
                     <li><a href="" class="nav">Portfolio</a></li>
@@ -125,7 +125,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html" class="logo">WEB<span class="partoflogo">STUDIO</span></a>
+            <a href="./index.html" class="logo">Web<span class="partoflogo">Studio</span></a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
