--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </ul>
             </section>
         </main>
-        <footer>
+        <footer class="footer">
             <a href="./index.html" class="logo">Web<span class="partoflogo">Studio</span></a>
             <p class="small">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
