--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </main>
         <footer class="footer">
             <a href="./index.html" class="logo">Web<span class="partoflogo">Studio</span></a>
-            <p class="small">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <p class="info">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
 </html>
