--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                 <ul>
                     <li>
                         <h3>Strategy</h3>
-                        <p class="small">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        <p class="medium">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>    
                         <h3>Punctuality</h3>
-                        <p class="small">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <p class="medium">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
                         <h3>Diligence</h3>
-                        <p class="small">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <p class="medium">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
                         <h3>Technologies</h3>
-                        <p class="small">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> 
+                        <p class="medium">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> 
                     </li>
                 </ul>
             </section>
