--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Section 2 -->
             <section>
-                <h2>Our goals</h2>
+                <h2 class="section-header">Our goals</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -63,7 +63,7 @@
 
         <!-- Section 3 -->
             <section>
-                <h2>Our Team</h2>
+                <h2 class="section-header">Our Team</h2>
                 <ul>
                     <li>
                         <img src="./images/img1.jpg" alt="Mark Guerrero, Product Designer" width="264" height="260">
@@ -89,7 +89,7 @@
             </section>
         <!-- Section 4 -->
             <section>
-                <h2>Our Portfolio</h2>
+                <h2 class="section-header">Our Portfolio</h2>
                 <ul>
                     <li>
                         <img src="./images/bank.jpg" alt="Banking App" width="360" height="300">
