--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 <h2 class="section-header">Our goals</h2>
                 <ul>
                     <li>
-                        <h3>Strategy</h3>
+                        <h3 class="headline">Strategy</h3>
                         <p class="medium">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>    
-                        <h3>Punctuality</h3>
+                        <h3 class="headline">Punctuality</h3>
                         <p class="medium">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
-                        <h3>Diligence</h3>
+                        <h3 class="headline">Diligence</h3>
                         <p class="medium">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
-                        <h3>Technologies</h3>
+                        <h3 class="headline">Technologies</h3>
                         <p class="medium">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p> 
                     </li>
                 </ul>
