--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </section>
 
         <!-- Section 3 -->
-            <section>
+            <section class="team">
                 <h2 class="section-header">Our Team</h2>
                 <ul>
                     <li>
