--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </header>
         <!-- Section 1 -->
         <main>    
-            <section>
-                <h1>Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button>
+            <section class="order">
+                <h1 class="main-headline">Effective Solutions for Your Business</h1>
+                <button type="button" class="button">Order Service</button>
             </section>
 
         <!-- Section 2 -->
