--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <li><a href="" class="nav">Contacts</a></li>
                 </ul>
             </nav>
-            <address>
+            <address class="address">
                 <ul>
                     <li>
-                        <a href="mailto:info@devstudio.com" class="address">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com" class="conts">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111" class="conts">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -65,25 +65,25 @@
             <section class="team">
                 <h2 class="section-header">Our Team</h2>
                 <ul>
-                    <li>
+                    <li class="teammates">
                         <img src="./images/img1.jpg" alt="Mark Guerrero, Product Designer" width="264" height="260">
-                        <h3>Mark Guerrero</h3>
-                        <p>Product Designer</p>
+                        <h3 class="headline">Mark Guerrero</h3>
+                        <p class="medium">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="teammates">
                         <img src="./images/img2.jpg" alt="Tom Ford, Frontend Developer" width="264" height="260">
-                        <h3>Tom Ford</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="headline">Tom Ford</h3>
+                        <p class="medium">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="teammates">
                         <img src="./images/img3.jpg" alt="Camila Garcia, Marketing" width="264" height="260">
-                        <h3>Camila Garcia</h3>
-                        <p>Marketing</p>
+                        <h3 class="headline">Camila Garcia</h3>
+                        <p class="medium">Marketing</p>
                     </li>
-                    <li>
+                    <li class="teammates">
                         <img src="./images/img4.jpg" alt="Daniel Wilson, UI Designer" width="264" height="260">
-                        <h3>Daniel Wilson</h3>
-                        <p>UI Designer</p>
+                        <h3 class="headline">Daniel Wilson</h3>
+                        <p class="medium">UI Designer</p>
                     </li>
                 </ul>
             </section>
